--- a/aaa/view/home.html
+++ b/aaa/view/home.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="main">
-			<div v-for="item in commodity" class="main-commodity-pic" v-on:mouseover="toggleModal(item)">
+			<div v-for="item in commodity" class="main-commodity-pic" v-on:mouseover="toggleModal(item)" v-on:mouseout="item.seen=true">
 				<img v-bind:src="item.imgurl"/>
 				<div class="main-commodity-pic-shadow"  v-bind:class="{hidden:item.seen}">
 					<p class="main-commodity-name">Bow earrings</p>
@@ -17,35 +17,6 @@
 				</div>
 			</div>
 		</div>
-		
-		
-	<script>
-
-		
-		var commodity = []
-		for(let i=2;i<38;i++){
-			let img_url = `../IMG/commodity/${i}.png`
-			
-			commodity.push({"imgurl":img_url,"seen":true})
-		}
-		
-		var home = new Vue({
-			el:".main",
-			data:{
-				commodity
-			},
-			methods:{
-				toggleModal:function(item){
-					commodity.forEach(function(value,index){
-						value.seen = true
-						
-					})
-					item.seen  = false
-					commodity.reverse().reverse()
-
-				}
-			}
-		})
-	</script>	
+	<script type="text/javascript" src="../script/home.js" ></script>
 	</body>
 </html>
